# Valorant-Vision

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  Test.cpp  Test.h  ValorantVision.cpp  ValorantVision.h  main.cpp  player_list.txt  resources.qrc
cpp/: LogBar.cpp  Mapdetector.cpp  Test.cpp  main.cpp  mainwindow.cpp  minimap.cpp  modelwrapper.cpp  neuralnetwork.cpp  ocr.cpp  videoplayer.cpp  webScraper.cpp
cpp/byte-track-eigen/: BYTETracker.cpp  BaseTrack.cpp  BoundingBoxIoUMatching.cpp  BoundingBoxTrackUtils.cpp  HungarianAlgorithmEigen.cpp  KalmanBBoxTrack.cpp  KalmanFilter.cpp  LinearAssignment.cpp
headers/: Mapdetector.h  logbar.h  mainwindow.h  minimap.h  modelwrapper.h  neuralnetwork.h  ocr.h  videoplayer.h  webScraper.h
headers/byte-track-eigen/: BYTETracker.h  BaseTrack.h  BoundingBoxIoUMatching.h  BoundingBoxTrackUtils.h  Export.h  HungarianAlgorithmEigen.h  KalmanBBoxTrack.h  KalmanFilter.h  LinearAssignment.h
model/: README.md  agentpreparation.py  dataset.yaml  faster_rcnn.onnx  generate.py  id_to_name.json  osnet_x1_0_dukemtmcreid.onnx  rcnn_training.ipynb  requirements.txt  testing.ipynb  training.ipynb  training_image_generator.py  training_image_generators.ipynb
style/: style.qss
